# LifeOS

./: .gitignore  .gitmodules  AI-REFERENCE.md  CHANGELOG-TAG-REMOVAL.md  CODEBUDDY.md  DEV.md  README.md  ROADMAP.md  UI-REFINEMENT-SUMMARY.md  docker-compose.yml  run.sh
.codebuddy/: settings.local.json
.serena/: project.yml
.serena/memories/: api_reference.md  code_style_conventions.md  database_guide.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  chat.py  export.py  notes.py  search.py  tags.py  trash.py  upload.py  user.py  versions.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  response.py  security.py
backend/app/models/: __init__.py  embedding.py  note.py  user.py  version.py
backend/app/schemas/: __init__.py  ai.py  note.py  user.py
backend/app/services/: __init__.py  deepseek.py  embedding.py  storage.py  tencent.py
docs/: 001-image-preview-feature.md  002-omnibar-editor-improvements.md  003-note-detail-editor-optimization.md  004-smart-tag-complete-guide.md
frontend/: Dockerfile  TEST_REPORT.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: layout.spec.ts  notes.spec.ts  screenshot.spec.ts  search.spec.ts  time-display.spec.ts
scripts/: init.sql  rebuild.sh
(+135 files in other folders)
