[project]
name = "lifeos-backend"
version = "0.1.0"
description = "LifeOS 后端 API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "tencentcloud-sdk-python>=3.0.1000",
    "cos-python-sdk-v5>=1.9.30",
    "beautifulsoup4>=4.12.3",
    "redis>=5.0.1",
    "markdown2>=2.4.12",
    "weasyprint>=62.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.0",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
build-backend = "hatchling build"
watch-backend = "hatchling watch"

[tool.black]
line-length = 100
target-version = ["py311"]
select = ["E", "F", "I"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
dev = "hatchling run app.main:dev --watch"
start = "hatchling run app.main:start"
test = "pytest -q"
test:cov = "pytest --cov=app --cov-report=term-missing"
